# mvgrpfiles

./: .gitignore  README.md  archive.py  generate_test_files.sh  groups.py  main.py  pyproject.toml  setup.cfg  setup.py
DEBIAN/: control
deb_dist/: mvgrpfiles_1.0-1.debian.tar.xz  mvgrpfiles_1.0-1.dsc  mvgrpfiles_1.0-1_amd64.buildinfo  mvgrpfiles_1.0-1_amd64.changes  mvgrpfiles_1.0-1_source.buildinfo  mvgrpfiles_1.0-1_source.changes  mvgrpfiles_1.0.1-1.debian.tar.xz  mvgrpfiles_1.0.1-1.dsc  mvgrpfiles_1.0.1-1_amd64.buildinfo  mvgrpfiles_1.0.1-1_amd64.changes  mvgrpfiles_1.0.1-1_source.buildinfo  mvgrpfiles_1.0.1-1_source.changes  mvgrpfiles_1.0.2-1.debian.tar.xz  mvgrpfiles_1.0.2-1.dsc  mvgrpfiles_1.0.2-1_amd64.buildinfo  mvgrpfiles_1.0.2-1_amd64.changes  mvgrpfiles_1.0.2-1_source.buildinfo  mvgrpfiles_1.0.2-1_source.changes  mvgrpfiles_1.0.3-1.debian.tar.xz  mvgrpfiles_1.0.3-1.dsc  mvgrpfiles_1.0.3-1_amd64.buildinfo  mvgrpfiles_1.0.3-1_amd64.changes  mvgrpfiles_1.0.3-1_source.buildinfo  mvgrpfiles_1.0.3-1_source.changes  mvgrpfiles_1.0.4-1.debian.tar.xz  mvgrpfiles_1.0.4-1.dsc  mvgrpfiles_1.0.4-1_amd64.buildinfo  mvgrpfiles_1.0.4-1_amd64.changes  mvgrpfiles_1.0.4-1_source.buildinfo  mvgrpfiles_1.0.4-1_source.changes  mvgrpfiles_1.0.5-1.debian.tar.xz  mvgrpfiles_1.0.5-1.dsc  mvgrpfiles_1.0.5-1_amd64.buildinfo  mvgrpfiles_1.0.5-1_amd64.changes  mvgrpfiles_1.0.5-1_source.buildinfo  mvgrpfiles_1.0.5-1_source.changes  mvgrpfiles_1.0.6-1.debian.tar.xz  mvgrpfiles_1.0.6-1.dsc  mvgrpfiles_1.0.6-1_amd64.buildinfo  mvgrpfiles_1.0.6-1_amd64.changes  (+16 more)
mvgrpfiles/: __main__.py  (+4 more)
(+75 files in other folders)
